Fixes field spacing in the desktop view of the donation form.

--- a/src/app/donate/donate.component.scss
+++ b/src/app/donate/donate.component.scss
@@ -65,11 +65,21 @@
                     .donation-form-section__header {
                         font-size: 26px;
                         font-weight: bold;
-                        margin-bottom: 16px;
+                        margin-bottom: 30px;
                     }
-            
-                    .donation-form-section__field-row {
+
+                    .donation-form-field-row {
+                        display: flex;
                         margin-bottom: 16px;
+                        width: 100%;
+
+                        .donation-form-field-column {
+                            flex: 1;
+    
+                            &:not(:last-child) {
+                                margin-right: 2%;
+                            }
+                        }
                     }
                 }
             }
@@ -86,6 +96,7 @@
             border: 1px solid darkgray;
             font-size: 18px;
             height: 48px;
+            padding: 0;
             width: 100%; 
         }
 
